k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swiggy-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: swiggy
  template:
    metadata:
      labels:
        app: swiggy
    spec:
      containers:
      - name: swiggy-container
        image: 838220668019.dkr.ecr.ap-south-1.amazonaws.com/eks-cluster-repo/swiggy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: swiggy-service
  namespace: swiggy
spec:
  selector:
    app: swiggy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
